--- a/index.html
+++ b/index.html
@@ -5,106 +5,73 @@
 	</head>
 
 	<body>
-		<h1>THE GREAT DISCORD DATA ANALYZER</h1>
-		<p>
-		SELECT A FILE AND PRESS A BUTTON
-		</p>
-		<!-- <input id="code" value="sum([1, 2, 3, 4, 5])" /> -->
-		<label for="myfile">Select a file:</label>
-		<input type="file" id="myfile" name="myfile">
+		<img src="/assets/logo.webp" width=100%>
 		<br />
-		<button id="directory-picker" onclick="evaluatePython()">Pick Directory</button>
+		<label for="directory-picker">1. Select a activity/analytics directory</label>
+		<button id="directory-picker" onclick="evaluatePython()" disabled>Pick Directory</button>
 		<br />
-		<button id="runbutton">CRUNCH THE DATA</button>
+		<br />
+		<label for="runbutton">2. push this button</label>
+		<button id="runbutton" disabled>CRUNCH THE DATA</button>
 		<br />
 		<!-- <button onclick="evaluatePython()"">Eval python again?</button> -->
-		<p>Program output:</p>
-		<div style="border:2px inset #AAA;cursor:text;height:120px;overflow:auto;width:600px; resize:both">
-			<div id="content">
-			</div>
-		</div>
-		<div>Some Other Output:</div>
-		<textarea id="output" style="width: 100%;" rows="6" disabled></textarea>
+		<!-- <p>Program output:</p> -->
+		<!-- <div style="border:2px inset #AAA;cursor:text;height:120px;overflow:auto;width:600px; resize:both"> -->
+		<!-- 	<div id="content"> </div> -->
+		<!-- </div> -->
+		<div>JS output</div>
+		<textarea id="output" style="width: 100%;" rows="8" disabled></textarea>
+		<div>Python output</div>
+		<textarea id="output2" style="width: 100%;" rows="8" disabled></textarea>
 
 		<script>
 			const output = document.getElementById("output");
-			// const code = document.getElementById("code");
-
-
 			function addToOutput(s) {
-				// output.value += ">>>" + code.value + "\n" + s + "\n";
-				output.value += "\n" + s + "\n";
+				output.value += s + "\n";
 			}
 
-			output.value = "Initializing...\n";
+			addToOutput("Loading python packages... 🔧");
 			// init Pyodide
 			async function main() {
-				let pyodide = await loadPyodide();
+				var out2 = document.getElementById("output2")
+				let pyodide = await loadPyodide({
+					stdout: (text) => {out2.textContent += text + "\n";},
+					stderr: (text) => {out2.textContent += text + "\n";}
+				});
 				await pyodide.loadPackage("micropip");
 				const micropip = pyodide.pyimport("micropip");
 				await micropip.install("matplotlib");
 				// await micropip.install("pandas");
-				output.value += "Ready!\n";
+				addToOutput("Python packages and runtime loaded! ✅");
+				document.getElementById("directory-picker").removeAttribute("disabled")
 				return pyodide;
 			}
-			// dirHandle = ""
 			let pyodideReadyPromise = main();
 
-			// evaluatePython()
-
-			// async function get_dir_handle() {
-			// 		dirHandle = await showDirectoryPicker();
-			// }
 
 			async function evaluatePython() {
 				let pyodide = await pyodideReadyPromise;
 				try {
-					// let output = pyodide.runPython(code.value);
 					const dirHandle = await showDirectoryPicker();
 					const permissionStatus = await dirHandle.requestPermission({
 						mode: "read",
 					});
 
 					if (permissionStatus !== "granted") {
-						throw new Error("readwrite access to directory not granted");
+						throw new Error("read access to directory not granted");
 					}
 
 					const nativefs = await pyodide.mountNativeFS("/data", dirHandle);
-					let output = pyodide.runPython(await (await fetch("/script.py")).text())
-					addToOutput(output);
+					addToOutput("Loading python script... 🔧");
+					pyodide.runPython(await (await fetch("/script.py")).text())
+					addToOutput("Python file loaded! ✅");
+					document.getElementById("runbutton").removeAttribute("disabled")
 
 				} catch (err) {
 					addToOutput(err);
 				}
 			}
 
-			// async function getDirectoryHandle() {
-			// 	try {
-			// 		// Prompt the user to select a directory.
-			// 			const directoryHandle = await window.showDirectoryPicker();
-			// 		console.log('Directory selected:', directoryHandle);
-			// 		return directoryHandle;
-			// 	} catch (error) {
-			// 		console.error('Error selecting directory:', error);
-			// 	}
-			// }
-			// document.getElementById('directory-picker').addEventListener('click', get_dir_handle);
-
-			// async function pick_dir() {
-			// 	// const dirHandle = showDirectoryPicker();
-			// 	// const permissionStatus = await dirHandle.requestPermission({
-			// 	// 	mode: "read",
-			// 	// });
-			//
-			// 	// if (permissionStatus !== "granted") {
-			// 	// 	throw new Error("readwrite access to directory not granted");
-			// 	// }
-			// 	// const dirName = "/home/roman/work/3_own/discord-gender-analyzer/";
-			// 	const dirHandle = getDirectoryHandle()
-			//
-			// 	const nativefs = await pyodide.mountNativeFS("/data", dirHandle);
-			//
-			// }
 		</script>
 	</body>
 </html>
