--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<script src="https://cdn.jsdelivr.net/pyodide/v0.26.0/full/pyodide.js"></script>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<script src="script.js" defer></script>
+		<meta charset="UTF-8">
+		<link rel="icon" href="/assets/logo.png" type="image/x-icon">
 	</head>
 
 	<body>
