add a cool ass loading animation

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<script src="script.js" defer></script>
 		<meta charset="UTF-8">
-		<link rel="icon" href="/assets/logo.png" type="image/x-icon">
+		<link rel="icon" href="/assets/favicon.png" type="image/x-icon">
 	</head>
 
 	<body>
+		<div id="logodiv">
 		<img src="/assets/logo.webp" width=100% id="logo">
+		<img src="/assets/gears.gif" id="overlay">
+		<!-- <div class="loader"></div> -->
+		</div>
 		<br />
 		<p>
 		This is a visualizer for your predicted gender and age numbers from events-*.json from your Discord Data Package.
