--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 			<details>
 				<summary>Huh? So it works fully on-device?</summary>
 				You can see the source code for yourself. It pulls PyOdide 
-				runtime from a CDN, and the python script is in /script.py, so
+				runtime from a CDN, and the python script is in 
+				<a href="/main.py">/main.py</a>, so
 				feel welcome to check it out yourself.
 			</details>
 		</details>
