--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
 				feel welcome to check it out yourself.
 			</details>
 		</details>
+		<div id=buttons>
+			<img src="./assets/buttons/800x600.gif">
+			<img src="./assets/buttons/best_chrome.gif">
+			<img src="./assets/buttons/fedora.gif">
+			<img src="./assets/buttons/written-in-vi.gif">
+		</div>
 
 	</body>
 </html>
